--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 乙: 也不像啊。普通用户一般可能会说，要功能强的，也就是支持多种媒体格式的，或者要安全的，怕病毒、网络攻击等等。他不会说需要正确的系统，这是一个专业人员才可能用的词汇，常形容架构性的失误，流行很久的系统不可能有这种失误吧。还有就是版本错误，你这用了这么久，好多人用，应该不会是版本错误。
 甲: 哦对对。
 乙: 这提示真奇怪，对话框里真是这么提示的？
-甲: 确实，我回去再看看。</p></div><div class=post-footer><time>May 14, 2021</time></div></article><article><h2><a href=https://blog.jinreal.com/posts/human-memory-origin/>人类的记忆可能是刚被植入的吗</a></h2><div><p>理性时代[1]的先驱、法国哲学家笛卡尔有一句名言——&ldquo;我思故我在&rdquo;，这句话常被作为人类真实存在的证据。而高出人类智能的生物或神是否存在？世界的开始是怎样的？人类从未停止思考这些问题。英国数学家罗素提出过一个5分钟假说，这个假说假设世界是在5分钟前刚被创造的，包括人类的记忆及其他一切历史。这个假说提出了挑战：人类现在的记忆是否可能是刚被植入的，而非我们亲身经历过的？
+甲: 确实，我回去再看看。</p></div><div class=post-footer><time>May 14, 2021</time></div></article><article><h2><a href=https://blog.jinreal.com/posts/human-memory-origin/>人类的记忆可能是刚被植入的吗</a></h2><div><p>理性时代[1]的先驱、法国哲学家笛卡尔有一句名言——&ldquo;我思故我在&rdquo;，这句话常被作为人类真实存在的证据。高出人类智能的生物或神是否存在？世界的开始是怎样的？人类从未停止思考这些问题。英国数学家罗素提出过一个5分钟假说，这个假说假设世界是在5分钟前刚被创造的，包括人类的记忆及其他一切历史。这个假说提出了挑战：人类现在的记忆是否可能是刚被植入的，而非我们亲身经历过的？
 "Ecole polytechnique du 5 rue Descartes à Paris" by Ecole polytechnique / Paris / France is licensed under CC BY-SA 2.0 回顾人类的过去我们可以看到：人类用群体智慧制造的大型工程经过反复测试后仍然可能出现失误，甚至并不罕见(例如著名的阿波罗13号登月的失败)，有些失误甚至看起来很初级(例如阿丽亚娜5号第一次发射的失败、Windows 98的蓝屏)。不仅历史上如此，至今自动驾驶汽车依然有不可忽略的安全隐患。人类仅仅创造一个理想的大型航天器(保证很高的发射成功率)或理想的自动驾驶交通系统(保证很高的安全性)就如此困难，那么创造几十亿人类的历史并将历史注入人的记忆中，形成一个可以运转的全球性的人类社会，使所有人的记忆没有明显冲突、不至于产生灾难(例如某个正常人记忆中的常识与他人不同却被委以重任)，这将是多么复杂的任务？我认为这太复杂了，即使是高于人类智能的生物也不可能完成。
 "jsc2014e069950 VA219 Ariane 5 ES with ATV-5 Georges Lemaître" by NASA Johnson is licensed under CC BY-NC 2.0 然后还剩下一个问题，就是神是否可能做这件事？我相信神不会做这件事，这不可能是神的意志。设想一下，如果5分钟前突然有一批好人被植入患病的记忆，被安排开始经历极度的痛苦，而5分钟前同时有一批好人被植入幸福生活的记忆，被安排开始经历极大的幸福，也就是说，人类仅仅是5分钟前开始的一场测试(test)中的实验品，且这测试极度的不公正，神会做这个测试吗？我相信神不会。
 我相信现在人类所记忆的历史是来自顺序发生的真实事件，不是被植入的记忆，换句话说，我相信世界是真实的，神是公正之神。
