deploy: c534758ef6ecbe08c731833ba07c2e13a1e2d738

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 這時又有一個人問：&ldquo;我以後準備考國際關係專業，請問這個世界怎麼樣才能繁榮？&rdquo;
 一點五流專家說：&ldquo;當然是低耦合、高內聚，民族之間&rdquo;。
 ================================
-已發布的:
+過去已發布的:
 新浪微博
 Medium</p></div><div class=post-footer><time>May 16, 2021</time></div></article><article><h2><a href=https://blog.jinreal.com/posts/system-checker/>小说：操作系统检查器(一)</a></h2><div><p>甲: 我朋友那有个电脑，很多人用，用了好多年了，最近系统好像出了大问题，不知道咋回事，他说资料都有备份，让我随便弄。我好奇，就试着捣弄了下也没看出点门道。
 乙：是啥样？
