deploy: 13cada155e7feb3742a771fe72535d6be3cf3f6b

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 「是的，要么是Rice and Ancient Moon，要么是Rice and Old Moon」E說。
 「米與遠古之月？米古月？」B說。
 「是的」C吸了一口氣，說道。
-連區名都被壓縮，這裡究竟發生了什麼，耗費了如此極限的能量，大家陷入了深思。過了不久，更多的資料被順利載入：
+連區名都被壓縮，這裡究竟發生了什麼，耗費了如此極限的能量，大家陷入了深思。過了不久，更多的記錄被順利載入：
 「這是一種新型ESSENCE，據說注入之後，原有的NL樹將在第三級長成時達到史無前例的RH值。
 &mldr;
 然而，注入之後，NL樹第一級便出現了生長停滯狀態，也就是說，第一級仍然需要非自動生長手段，而且居然需要緊急手段。
