deploy: b7b90f58d7e88961cb39947c9bed760f247ee3db

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-ai-field-overview/>
+【非真實地場】AI區初探
+</a>
+</h2>
+<div>
+<p>「這次的名稱是唯一的吧」D問。
+「是的，叫Another Inch」A說。
+「又一英尺？」C說。
+「寸，應該是又寸」A確定的說。
+「難道AI區也注入了新型ESSENCE嗎？」C說。
+「很不幸，我認為是的」C說。</p>
+</div>
+<div class=post-footer>
+<time>July 29, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-ram-field-overview/>
 【非真實地場】RAM區初探
 </a>
@@ -234,20 +253,6 @@ Programming Language(1)/編程語言(1)
 </div>
 <div class=post-footer>
 <time>May 11, 2021</time>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/long-2/>
-小說：早(二)
-</a>
-</h2>
-<div>
-<p>路人甲：這培訓機構真奇怪，說要"教你如何吃書"。
-路人乙：你是新來的吧，我們這早就不看書了。</p>
-</div>
-<div class=post-footer>
-<time>May 6, 2021</time>
 </div>
 </article>
 </div>
