--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 </div>
 <div class=post-footer>
 <time>July 30, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
 <article>
