deploy: a258beb4467572ab39f253f61ac31df6eed6ad1a

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 「什麼馬賽克、九宮格，是不完全信息」B說。
 「不是不完全信息，是完全沒有信息」E說。
 「色彩全部是重複的」D說。
-「又+寸=對，AI=又+寸，所以AI=对？真不知道下次會挖出什麼，XX=X+X=錯？夠了夠了，去他大爺的對錯，簡直是個玩笑」A說完。</p>
+「又+寸=對，AI=又+寸，所以AI=对？噢，天不知道下次會挖出什麼，XX=X+X=錯？夠了夠了，去他大爺的對錯，簡直是個玩笑」A說完走出了工作間。</p>
 </div>
 <div class=post-footer>
 <time>July 29, 2021</time>
