deploy: 429974bba1416947adedb36c4147f87883b2e158

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 「寸，應該是又寸」A確定的說。
 「難道AI區也注入了新型ESSENCE嗎？」B說。
 「很不幸，估計是」C說。
-大家繼續看著記錄。
+大家繼續看著記錄：
 「這塊記錄只有一部分是有效的」A說。
 「九宮格那部分沒有信息」F邊說邊看著屏幕：
 「就是馬賽克那部分」C邊說邊看著屏幕：
