deploy: bf9513b69d09c9c47d66d1d3ba96f91cdbe20881

--- a/index.html
+++ b/index.html
@@ -134,39 +134,6 @@ Flat Earth map drawn by Orlando Ferguson in 1893. 比這個疑問更根本的是
 </article>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-research-result/>
-【非真實地場】研究結果
-</a>
-</h2>
-<div>
-<p>A把挖出的東西發送給研究團隊。那是一張紙，上面畫滿了符號。共分上下兩部分，每部分有28個符號。
-「終於出來了」D喊道。
-原來這是兩首七絕的編碼，上半部分是蘇軾(北宋，1037年生)寫的《提西林壁》，下半部分是陸游(南宋，1125年生)寫的《示兒》。
-「在十六進制卡了太久了」D說(這兩首的十六進制編碼是BFFFA6C 1BCDD7D)。
-編碼規則不難理解，一個字符如果筆劃全部相連，就是0，筆劃有分開的，哪怕只有一筆，也是1。記錄的是分分合合的字符特徵。
-「之前有人說這是色彩編碼，我說怎麼可能呢，果然」D一邊說著，一邊想著這兩首詩：
-橫看成嶺側成峰
-遠近高低各不同
-不識廬山真面目
-只緣身在此山中
-死去元知萬事空
-但悲不見九州同
-王師北定中原日
-家祭無忘告乃翁
-「我還是奇怪，為什麼是56個字符，蘇軾寫的詩裡四句裡有三句有山或者部分山，我大腦裡想到了56座山，想到了山本五十六，是不是要發生戰爭了」C說。
-「你是不是太累了，56個山，像視力表一樣，該歇歇眼了吧」B說。
-「蘇軾除了叫東坡居士之外，還叫铁冠道人，他小時候學過道教，我查了下，1042年他拜道士张易简為師，這個也很像道教、周易之類的東西」E說。
-「哦，難怪，是寫景詩，又是哲理詩」C說。
-「七絕(英文QiJue)，四七二十八，八七五十六，有意思」E說。
-「回去嘍」B說。</p>
-</div>
-<div class=post-footer>
-<time>May 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
 <a href=https://blog.jinreal.com/posts/why-i-create-sandengjs/>
 Why I create SandengJS/為什麼我創建SandengJS
 </a>
@@ -242,6 +209,20 @@ Programming Language(1)/編程語言(1)
 <div>
 <p>路人甲：這培訓機構真奇怪，說要"教你如何吃書"。
 路人乙：你是新來的吧，我們這早就不看書了。</p>
+</div>
+<div class=post-footer>
+<time>May 6, 2021</time>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/long-3/>
+小说：早(三)
+</a>
+</h2>
+<div>
+<p>路人甲：這培訓機構真奇怪，說要"教你如何吃情"。
+路人乙：你是新來的吧，我們這早就不談情了。</p>
 </div>
 <div class=post-footer>
 <time>May 6, 2021</time>
