deploy: 4a489b0b8807d5cbff9d5206c039897ab6fcba07

--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
 </article>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-ram-field-overview/>
+【非真實地場】RAM區初探
+</a>
+</h2>
+<div>
+<p>「記錄上有的是RAM，有的是ROM」E說。
+「映射結果是什麽」C問。
+「Rice and Ancient Moon，或者Rice and Old Moon」E說。
+「米與遠古之月？米古月？」B說。
+「是的」C吸了一口氣，說道。
+大家看著剛讀取的記錄：
+「像是字典」A說。
+「看看這個」B說。
+「Pattern?」D自言自語道。
+大家陷入了思考。</p>
+</div>
+<div class=post-footer>
+<time>July 29, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/flat-earth/>
 對地平論的看法
 </a>
@@ -209,20 +232,6 @@ Programming Language(1)/編程語言(1)
 <div>
 <p>路人甲：這培訓機構真奇怪，說要"教你如何吃書"。
 路人乙：你是新來的吧，我們這早就不看書了。</p>
-</div>
-<div class=post-footer>
-<time>May 6, 2021</time>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/long-3/>
-小说：早(三)
-</a>
-</h2>
-<div>
-<p>路人甲：這培訓機構真奇怪，說要"教你如何吃情"。
-路人乙：你是新來的吧，我們這早就不談情了。</p>
 </div>
 <div class=post-footer>
 <time>May 6, 2021</time>
