--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.87.0">
+<meta name=generator content="Hugo 0.88.0">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -44,6 +44,27 @@
 </nav>
 <div id=content class=content-container>
 <div class=article-content>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-sa-field-overview/>
+【非真實地場】SA區初探
+</a>
+</h2>
+<div>
+<p>「舟亢，真有這個區域？」A問。
+「是的，SA，Sailor&rsquo;s Advantage」D說。
+「感覺有點牽強啊，真是擴譯的嗎」C說。
+「是的，只有機器智能，沒有人類智能」D說。
+「其他區還有什麼嗎？」A問。
+「還有AI區的」D指著：
+C指著ROM區剛讀取的紀錄：
+</p>
+</div>
+<div class=post-footer>
+<time>September 2, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-ai-field-overview/>
@@ -221,20 +242,6 @@ Programming Language(1)/編程語言(1)
 </div>
 <div class=post-footer>
 <time>May 11, 2021</time>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/long-2/>
-小說：早(二)
-</a>
-</h2>
-<div>
-<p>路人甲：這培訓機構真奇怪，說要"教你如何吃書"。
-路人乙：你是新來的吧，我們這早就不看書了。</p>
-</div>
-<div class=post-footer>
-<time>May 6, 2021</time>
 </div>
 </article>
 </div>
