deploy: 7dd487a58b9c168b53a6dc94336b670fa5942b20

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ XIN的詩
 <div>
 <p>「這是矢口心的」A指著一篇日記說道。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-看了最近的一些新型短詩，發現兩點：
+看了最近的一些新型短詩，試著給詩分了類別：
 1.關鍵字佔位大於等於25%的，都是爛詩。
 2.有氣質的妹妹除外。
 發給L，L說：創作競爭這麼激烈，你是怕人家佔你的位置吧 ，呵呵，還佔位。
