--- a/index.html
+++ b/index.html
@@ -46,6 +46,35 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-ye-on-painting/>
+YE與畫
+</a>
+</h2>
+<div>
+<p>「還有什麼數據嗎」E問。
+一段圖像信息讀取了出來：
+-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
+A同學拿出一張紙：
+大 大大 大大大 大大大大 大大大大大
+「你這篇，呵呵呵，這是詩還是句子呢」老師邊笑邊問。 「我也不知道」A說。 「是詩句」B說。 「這簡直是失據，我是說，你沒有證據，怎麼證明它是詩呢」C說。
+學生A沉默了一會兒而，沒有說話，又拿出了另一張紙：
+大 大大
+大大大
+大大大大
+大大大大大
+「這，這是字還是畫呢」老師睜大眼睛問道。 「我也不知道」A說。 「是字畫」B說。 「這看起來沒有意義」老師說。
+-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
+「哦，還有相關的嗎」E問。
+「還有這些」A說。
+</p>
+</div>
+<div class=post-footer>
+<time>September 4, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-xin-on-poem/>
 【非真實地場】XIN與詩
 </a>
@@ -231,31 +260,6 @@ Programming Language(1)/編程語言(1)
 </div>
 <div class=post-footer>
 <time>May 18, 2021</time>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/system-checker/>
-小说：操作系统检查器(一)
-</a>
-</h2>
-<div>
-<p>甲: 我朋友那有个电脑，很多人用，用了好多年了，最近系统好像出了大问题，不知道咋回事，他说资料都有备份，让我随便弄。我好奇，就试着捣弄了下也没看出点门道。
-乙：是啥样？
-甲: 有鼠标，灰色背景，不是黑屏，肯定已经进了系统。上面什么都没有，只有右下角有个系统检查器的图标，我进去以后提示“点击帮助会有专家回复”，我想这挺好的，就点了一下，等了一会儿，弹出一个对话框，说：“你个傻瓜！你没有系统，你需要一个最正确的系统！”。我一看就蒙了，你说这是什么意思啊？
-乙: 我就上培训班学过一个月的开发，而且不是系统开发，更不是做操作系统的，只是做很简单的网站。我不是搞操作系统的，连网站开发都懂得很少啊。
-甲: 没事，你说说，这会不会是机器自己报的错，不是专家给的。
-乙: 不会，如果没装系统，或者识别不出来系统，BIOS也就是硬件的基本系统会告诉你：没有系统。BIOS不会提示要正确的系统。
-甲: 如果系统有问题呢？会不会提示错误的系统？
-乙: 那个叫系统错误吧，不是错误的系统。它会报具体错误，分区表错误啦、启动盘错误啦之类的。
-甲: 哦，那这估计就是普通用户的反馈，和我一样，就是那种完全不懂编程的，但是比我用的多，也知道一般该用什么系统，知道常见问题怎么解决。
-乙: 也不像啊。普通用户一般可能会说，要功能强的，也就是支持多种媒体格式的，或者要安全的，怕病毒、网络攻击等等。他不会说需要正确的系统，这是一个专业人员才可能用的词汇，常形容架构性的失误，流行很久的系统不可能有这种失误吧。还有就是版本错误，你这用了这么久，好多人用，应该不会是版本错误。
-甲: 哦对对。
-乙: 这提示真奇怪，对话框里真是这么提示的？
-甲: 确实，我回去再看看。</p>
-</div>
-<div class=post-footer>
-<time>May 14, 2021</time>
 </div>
 </article>
 </div>
