--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@ YE與畫
 一段圖像信息讀取了出來：
 -*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
 A同學拿出一張紙：
-大 大大 大大大 大大大大 大大大大大 「你這篇，呵呵呵，這是詩還是句子呢」老師邊笑邊問。 「我也不知道」A說。 「是詩句」B說。 「這簡直是失據，我是說，你沒有證據，怎麼證明它是詩呢」C說。
+大 大大 大大大 大大大大 大大大大大 「你這篇，呵呵呵，這是詩還是句子呢」老師邊笑邊問。
+「我也不知道」A說。
+「是詩句」B說。
+「這簡直是失據，我是說，你沒有證據，怎麼證明它是詩呢」C說。
 學生A沉默了一會兒而，沒有說話，又拿出了另一張紙：
-大 大大 大大大 大大大大 大大大大大 「這，這是字還是畫呢」老師睜大眼睛問道。 「我也不知道」A說。 「是字畫」B說。 「這看起來沒有意義」老師說。
+大 大大 大大大 大大大大 大大大大大 「這，這是字還是畫呢」老師睜大眼睛問道。
+「我也不知道」A說。
+「是字畫」B說。
+「這看起來沒有意義」老師說。
 -*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
 「哦，還有相關的嗎」E問。
 「還有這些」A說。
