--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </a>
 </h2>
 <div>
-<p>「還有什麼數據嗎」E問。
+<p>「還有什麼數據嗎」D問。
 一段圖像信息讀取了出來：
 -*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
 A同學拿出一張紙：
@@ -65,7 +65,7 @@ A同學拿出一張紙：
 「是字畫」B說。
 「這看起來沒有意義」老師說。
 -*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-「哦，還有相關的嗎」E問。
+「哦，還有相關的嗎」D問。
 「還有這些」A說。
 </p>
 </div>
