deploy: 2a4bae7eb74c39e86293236a78775c25f6691d2b

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </a>
 </h2>
 <div>
-<p>「Word Graph我不太確定是指什麼」T問。
-「MM方面的知識你看了吧，都是和機械相關的東西」C問。
+<p>「Word Graph還不太熟悉」T問。
+「MM之類的看了吧，都是和機械方面的東西」C問。
 「在看」T說。
 「很快就會熟悉了」C說。
 「好的，感覺有點亂，有個表格就好了」T說。
