--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 <p>「Seasome, Rice, Ancient Moon，SRAM? 什麼玩意」C問。
 「芝麻米古月？簡直是瞎弄」D說。
 「我不知道我們在做什麼」B說。
-「芝麻糊，芝麻店，芝麻街，芝麻城，噢，我的神啊」D說。
-「Defend the ancient！」B說。
+「芝麻糊，芝麻店，芝麻街，芝麻城，噢，這裡難道是遊樂園嗎，我的神啊」D說。
+「Defend the ancients！」B說。
 「什麼?」D說。
 「他在開玩笑」A說。
 「看看這個」A繼續說。
