--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 </a>
 </h2>
 <div>
-<p>「Word Graph還不太熟悉」T問。
+<p>「wordgraph還不太熟悉」T問。
 「MM之類的看了吧，都是和機械方面的東西」C問。
 「在看」T說。
 「很快就會熟悉了」C說。
-「好的，感覺有點亂，有個表格就好了」T說。
+「感覺有點亂，有個表格就好了」T說。
 「看看這個」C說。
 「還有這個」C指著另一塊數據。
 </p>
