--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.88.0">
+<meta name=generator content="Hugo 0.88.1">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>「wordgraph還不太熟悉」T問。
-「MM之類的看了吧，都是和機械方面的東西」C問。
+「MM之類的看了吧，都是機械方面的東西」C問。
 「在看」T說。
 「很快就會熟悉了」C說。
 「感覺有點亂，有個表格就好了」T說。
