deploy: c6370911f3e72deae81cecf4ff758a192cee0acb

--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-t-preparation/>
+【非真實地場】T的準備
+</a>
+</h2>
+<div>
+<p>「wordgraph還不太熟悉」T問。
+「MM之類的看了吧，都是機械方面的東西」C問。
+「在看」T說。
+「很快就會熟悉了」C說。
+「感覺有點亂，有個表格就好了」T說。
+「看看這些」C說。
+「還有這個」C指著另一塊數據。
+</p>
+</div>
+<div class=post-footer>
+<time>September 5, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-knowledge/>
 【非真實地場】Knowledge
 </a>
@@ -261,25 +282,6 @@ Flat Earth map drawn by Orlando Ferguson in 1893. 比這個疑問更根本的是
 </div>
 <div class=post-footer>
 <time>May 27, 2021</time>
-<a class=tag href=/tags/%E5%85%B6%E4%BB%96>#其他</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/logic/>
-邏輯學
-</a>
-</h2>
-<div>
-<p>封面
-1
-2
-3
-4
-5</p>
-</div>
-<div class=post-footer>
-<time>May 22, 2021</time>
 <a class=tag href=/tags/%E5%85%B6%E4%BB%96>#其他</a>
 </div>
 </article>
