deploy: c4829747a57a3746daf8243fe55c6b2973de7477

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p>「這些是什麼腳本」T問。
 「看看這些」C說。
 =======================
-不要怕，我知道是第幾層。她不知道我練了20年，以為我有超級儀器，我告訴她，沒有超級儀器，只有超級女人，那就是我。
+我說：「不要怕，我知道是第幾層」。她不知道我練了20年，以為我有超級儀器，我告訴她，沒有超級儀器，只有超級女人，那就是我。
 她將信將疑的說：「你真是個寶。怎麼看出來呢?」 我說：「機器最快要5秒才能確定層數。我最多需要3秒，一般只用一兩秒」。
 她找來了最新的機器，發現需要六秒甚至七秒，而且有時還出錯，是那種很低級的錯誤，一看就看得出來。看到這些之後，她一臉驚呆的樣子，激動的問我是不是P和NP的問題。我說沒時間了問專家就知道了，這才順利開始。
 =======================
