deploy: 7dcf8ac1f9befd0564446159054c089819988811

--- a/index.html
+++ b/index.html
@@ -46,28 +46,6 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-on-women/>
-【非真實地場】女人
-</a>
-</h2>
-<div>
-<p>「這些是什麼腳本」T問。
-「看看這些」C說。
-=======================
-我說：「不要怕，我知道是第幾層」。她不知道我練了20年，以為我有超級儀器，我告訴她，沒有超級儀器，只有超級女人，那就是我。
-她將信將疑的說：「你真是個寶。怎麼看出來呢?」 我說：「機器最快要5秒才能確定層數。我最多需要3秒，一般只用一兩秒」。
-她找來了最新的機器，發現需要六秒甚至七秒，而且有時還出錯，是那種很低級的錯誤，一看就看得出來。看到這些之後，她一臉驚呆的樣子，激動的問我是不是P和NP的問題。我說沒時間了問專家就知道了，這才順利開始。
-=======================
-「還有這些」C指著：
-</p>
-</div>
-<div class=post-footer>
-<time>September 5, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-era/>
 【非真實地場】年代
 </a>
@@ -282,6 +260,24 @@ C指著RAM區剛讀取的紀錄：
 <div class=post-footer>
 <time>July 29, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/flat-earth/>
+對地平論的看法
+</a>
+</h2>
+<div>
+<p>由於神經疾病(關於牛津)的原因，我12歲之後物理便非常差(目前已幾乎完全具有學習物理的能力)，目前只看過很少的物理學的資料。最近在社交媒體上頻繁看到地平論的介紹和討論，這個理論不止與主流理論不同，它看起來荒謬。為了確定我看到的論點是完整的，我昨天仔細看了幾篇資料，看完之後我的第一個疑問是：
+為什麼地球的運動如此簡單(直線運動)，而太陽與月亮不是(封閉的曲線，甚至很複雜的封閉的曲線)?
+注: 地平論認為地球以9.8米/秒的速度向上運動。
+Flat Earth map drawn by Orlando Ferguson in 1893. 比這個疑問更根本的是：地平論是怎樣解釋整個宇宙的? 例如宇宙中的星體如何分類，它包括直線運行的星體和曲線運行的星體?
+對權威的質疑是追求真理的基礎，所以儘管它聽起來奇怪我仍然去了解這個理論。
+前提當然是：這些討論是自發的討論，而非有組織的欺騙，這兩者完全不是一件事情。</p>
+</div>
+<div class=post-footer>
+<time>June 14, 2021</time>
 </div>
 </article>
 </div>
