--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-option/>
+【非真實地場】選項
+</a>
+</h2>
+<div>
+<p>「2和3屬於一類數」A說。
+「大家都知道」D說。
+「測試做了多少了」A問。
+「快完了，我在看擴譯器的配置」N邊說邊看著加註釋的擴譯結果。
+「不看也知道，沒什麼用」N心裡想，然後繼續看數據。
+</p>
+</div>
+<div class=post-footer>
+<time>September 7, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-simulation/>
 【非真實地場】虛擬
 </a>
@@ -249,33 +268,6 @@ C指著RAM區剛讀取的紀錄：
 </div>
 <div class=post-footer>
 <time>September 2, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-ai-field-overview/>
-【非真實地場】AI區初探
-</a>
-</h2>
-<div>
-<p>「這次的名稱映射夠確定了吧？」D問。
-「是的，看起來應該叫Another Inch」A說。
-「又一英尺？」C說。
-「寸，應該是又寸」A確定的說。
-「難道AI區也注入了新型ESSENCE嗎？」B說。
-「很不幸，估計是」C說。
-大家繼續看著記錄：
-「這塊記錄只有一部分是有效的」A說。
-「九宮格那部分沒有信息」F邊說邊看著屏幕。
-「就是馬賽克那部分」C邊說邊看著屏幕。
-「什麼馬賽克、九宮格，是不完全信息」B說。
-「色彩只有一種變化模式，看不出年代，什麼也看不出來」E說。
-「不是不完全信息，是完全沒有信息」D說。
-「又+寸=对，AI=又+寸，所以AI=对？噢，天知道下次會映射出什麼，XX=X+X=錯？夠了夠了，這簡直是個玩笑」A說完走出了工作間。</p>
-</div>
-<div class=post-footer>
-<time>July 29, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
