--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-assembly/>
+【非真實地場】組合
+</a>
+</h2>
+<div>
+<p>「很多時候是資料的整理，或者說組合」A說。
+「我們關注的是語言」D邊說邊看著閃爍的鏈接器：
+「達芬奇說 &ldquo;He who loves practice without theory is like the sailor who boards ship without a rudder and compass and never knows where he may cast&rdquo;(愛實踐而沒有理論的人，就像沒有舵和指南針登上船的水手，永遠不知道他可以投向何處)」A說。
+「理論似乎是薄弱的，我們需要理論」B說。
+「這也是我想說的，看這個」C說。
+「你是說，理論的體系?」B說。
+「也許不是個體系，怎麼說呢，看看這個」C說。
+「額，上面一層是什麼呢」E說。
+「智力屬性，路線等等」C說。
+「似乎很合理」D說。
+「至今為止，我認為我們得到的很多解釋非常清晰，坦白地說，我從來沒見過這麼清晰的解釋」D說。
+「我也是，太清晰了，難以置信」D說。</p>
+</div>
+<div class=post-footer>
+<time>September 8, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-theory/>
 【非真實地場】理論
 </a>
@@ -236,37 +261,6 @@ A同學拿出一張紙：
 </div>
 <div class=post-footer>
 <time>September 4, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-xin-on-poem/>
-【非真實地場】XIN與詩
-</a>
-</h2>
-<div>
-<p>「這是矢口心的」A指著一篇日記說道。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-看了最近的一些新型短詩，試著給詩分了類別：
-1.關鍵字佔位大於等於25%的，都是爛詩。
-2.有氣質的妹妹除外。
-發給L，L說：創作競爭這麼激烈，你是怕人家佔你的位置吧 ，呵呵，還佔位。
-我問L是不是又欠扁了，我說這不是佔我的位置，是符號佔了靈的位置，人佔了神的位置。有霸氣則無靈氣。唉，別跟我扯統計學、計算機、統計學習了，感覺弱弱的。
-L說：妹妹，我是為女人們著想，覺得你還是別寫了，給姐姐們留條生路，再說了，哪有妹妹啊，你最小，你這個混蛋。姐姐們還小，他們還是孩子，救救孩子。
-無語。我想了想，說：以前寫的那些小說都沒什麼意思，這些小說就像臉，我不能老靠臉吃飯啊。我的意思是，我想靠嘴吃飯，寫點詩、唱唱歌什麼的。
-L說：好吧。我也會寫詩了。
-我一看：
-天生勵志
-天生可愛
-兩個25%，爛上加爛。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「哦，還有相關的嗎」C說。
-「這應該也是她的」A說。
-</p>
-</div>
-<div class=post-footer>
-<time>September 3, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
