deploy: 6b333dc68bec695cfb6b70fb4fc0fc964af6af86

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>「大腦裡的圖像越來越清楚」D說。
-「是的，怎麼說都得先有一個想像」A說。
+「是的，怎麼說都得先有一個圖像之類的東西」A說。
 「我在想為什麼解釋會這麼清晰」B說。
 「也許是字數比較多，描述比較詳細」N說。
 「這可能涉及到概念之間的關係」C說。
