deploy: 7a33a32511ed67f64cfddf679f0b14f7bcd9b0f4

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-on-count/>
+<a href=https://blog.jinreal.com/posts/uf-s-preparation/>
 【非真實地場】S的準備
 </a>
 </h2>
