--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 「弄結構的人太少了吧」W說。
 「理論基礎好像也有些薄弱，結構研究總感覺不太夠」A說。
 「看看這個」C說。
-「數字，生成型、組合型」</p>
+「數字，生成型、組合型」S思考著。</p>
 </div>
 <div class=post-footer>
 <time>September 10, 2021</time>
