deploy: f5778901d0e4860199ebb6db8eb5435998b84600

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>「弄結構的還是太少了吧」D說。
 「足夠了，SSTABLE不大，它只是基礎」E說著，看著表格。
-「理論基礎好像也有些薄弱，結構研究總感覺不太夠」A說。
+「理論基礎好像也有些薄弱，結構研究總感覺不太夠」W說。
 「看看這個」C說。
 「數字，生成型、組合型」S思考著。</p>
 </div>
