--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-speed/>
+【非真實地場】速度
+</a>
+</h2>
+<div>
+<p>「節奏不錯」C說。
+「恩」N說。
+「有時候覺得難以置信，已經搭建了這麼多」V說。
+「像在做夢」D一邊說一邊看著。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr; &mldr;
+聽別人說，他只喜歡有骨架的女人，就是那些和男人一樣高的女人。他總是一副冷酷的樣子，追她的那些女生，那麼時尚的打扮，我從沒聽說他特別照顧過誰。大家一起出去的時候，他為什麼每次都願意帶着我呢? 我雖然不是那種小女人，但我一直都是那樣打扮，你知道。一個個的像女士先生，只有我例外，他居然不覺得我丟人。他們都說他腦子進水了，每次帶著一個大老土。確實，如果不是他，誰會注意到我呢? 哎，我總是在想，為什麼是他。
+每次回來差不多都有一場戰鬥，有時候我只是說一聲謝謝，他們就說我“做作”，甚至嘲笑我說我把自己當公主了，我真不知道該說什麼，他們跳過的舞、去過的地方，有哪一點我能比得上?
+你知道嗎，那次我生病，碰巧他要去他外婆的莊園路過我這，聽我爸爸說我病了，我爸說了沒事，他硬是說危險要帶著我去看，他帶著我一路上居然問了我幾次“能撐住嗎”、“行不行”，見到了一個不知名但好像很資深的醫生，果真很危險。路上我抱著他的腰，想著他對我那麼好，眼淚忍不住流出來，我想再偷看看他那張臉，又一想還是算了吧，他那麼高，又那麼漂亮，再看一眼我怕真的忘不掉。
+這幾次出海可能有些危險，最近翻了好幾艘船，你知道。我總是想到那時候，他帶著我騎得那麼快，就像飛起來一樣，我卻一點都不害怕。我總是在想，為什麼是他。 &mldr; &mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 10, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-structure/>
 【非真實地場】結構
 </a>
@@ -238,25 +261,6 @@
 </div>
 <div class=post-footer>
 <time>September 6, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-era/>
-【非真實地場】年代
-</a>
-</h2>
-<div>
-<p>「年代之間區別很大」J說。
-「是的，看這個」D說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-M問我為啥還看爛片，問我是不是太寂寞了，只是看個臉。我說也許就是看個臉，只是有的臉一看就看得清，有的怎麼看也看不清。
-當然還得看年代，有些年代，臉普遍看不清，只有幾個例外。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 5, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
