--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 </h2>
 <div>
 <p>「節奏不錯」C說。
-「恩」N說。
-「有時候覺得難以置信，已經搭建了這麼多」V說。
+「恩」V說。
+「有時候覺得難以置信，已經搭建了這麼多」N說。
 「像在做夢」D一邊說一邊看著。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr; &mldr;
 聽別人說，他只喜歡有骨架的女人，就是那些和男人一樣高的女人。他總是一副冷酷的樣子，追她的那些女生，那麼時尚的打扮，我從沒聽說他特別照顧過誰。大家一起出去的時候，他為什麼每次都願意帶着我呢? 我雖然不是那種小女人，但我一直都是那樣打扮，你知道。一個個的像女士先生，只有我例外，他居然不覺得我丟人。他們都說他腦子進水了，每次帶著一個大老土。確實，如果不是他，誰會注意到我呢? 哎，我總是在想，為什麼是他。
