--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 「恩」V說。
 「有時候覺得難以置信，已經搭建了這麼多」A說。
 「像在做夢」D一邊說一邊看著。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr; &mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&mldr; &mldr;
 他太高了，聽別人說，他只喜歡有骨架的女人，就是那些長得快和男人一樣高的女人。他總是一副冷酷的樣子，追她的那些女生，那麼時髦的打扮，從沒聽說他特別照顧過誰。大家一起出去，很奇怪他每次都願意帶着我，我雖然不像小女人，但我只有那些衣服，你知道的。他們每一個都像女士先生，只有我不一樣，他竟然不覺得我丟人。他們都說他腦子進水了，每次帶著一個大老土不嫌麻煩。上帝啊，如果不是他，誰會注意到我呢?
 每次回來幾乎都有一場戰鬥，有時候我只是說一聲謝謝，他們都會說我做作，甚至嘲笑說我把自己當公主了，天啊，他們跳過的舞、去過的地方，有哪一點我能比?
 你知道嗎，那次我生病，碰巧他去外婆的莊園路過我家，聽我爸說我病了，我爸說了沒事，他硬是說危險要帶我去看醫生，我爸拗不過他於是他帶著我就走，他怕我昏睡過去就讓我坐在後面，一路上問了我好多次“能撐住嗎”、“行不行”，我抱著他的腰，想著他對我這麼好，眼淚忍不住流出來。他只顧趕路，頭也不回，我想抬頭仔細看看他的臉，再一想還是算了，他那麼高，又那麼漂亮，再看一眼真怕忘不掉。到了一個不知名但很資深的醫生那裡，果真很危險，雖然不致命，幸虧碰到他及時處理，否則真不敢想像現在是怎樣。
