--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-properties/>
+【非真實地場】影響
+</a>
+</h2>
+<div>
+<p>「這幾個屬性之間的關係弄了好久了」C說。
+「是啊，估計快完了」T說。
+「不是用度數描述的」D說。
+「恩，肯定不是」W邊說邊看著。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&mldr; &mldr; &ldquo;One hundred yeahs"只聽那個人用極慢的速度吐出了"one hundred"兩個單詞。我看著那個小孩，年齡如此之小，不太可能精通攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了。他說yeahs，什麼意思? 一定是在說元，發音不太標準，但還加個複數，看得出非常認真，畢竟能流利的拼出yuan這個音已經很不錯了。我想，100塊? 僅僅是一份拷貝而已，太貴了，這種東西真的有人要嗎? 或許是他的設備比較好? 於是我問他"Do you mean 100 dollar?&rdquo; 他說：&ldquo;不，不是美元&rdquo;。嗨，他懂中文。接著他認真的一個字一個字的說：&ldquo;是 一 百 念&rdquo;，我大腦立刻停止了運轉。&ldquo;What? One, one hundred years?&rdquo; &mldr; &mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+</p>
+</div>
+<div class=post-footer>
+<time>September 11, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-speed/>
 【非真實地場】速度
 </a>
@@ -238,26 +258,6 @@
 「你是說神的理論?」C說。
 「我再想想」J說。
 「看看這個」C說。
-</p>
-</div>
-<div class=post-footer>
-<time>September 6, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-link/>
-【非真實地場】鏈接
-</a>
-</h2>
-<div>
-<p>「Mapping到多少了」A問。
-「已經更新了，感覺有點兒像遊戲」T說。
-「差不多了，這部分已經足夠豐富」C說。
-「還有這些」J說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-就是你回家拿塔羅牌那次我和T去的那家店，後來有一次碰巧路過，我就又買了一個給H，就是這個。我和H在這邊找了好久，有賣類似圖案的，可木頭沒那個好。哦对，那一代的迷宮太难了，感觉比拉帕格尼尼还难。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 </p>
 </div>
 <div class=post-footer>
