--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-on-properties/>
-【非真實地場】影響
+<a href=https://blog.jinreal.com/posts/uf-on-degree/>
+【非真實地場】屬性
 </a>
 </h2>
 <div>
