deploy: 5ab9c941e2660df6670d4e574d3fc1a4ed556532

--- a/index.html
+++ b/index.html
@@ -47,26 +47,6 @@
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-on-degree/>
-【非真實地場】屬性
-</a>
-</h2>
-<div>
-<p>「這幾個屬性之間的關係弄了好久了」C說。
-「是啊，估計快完了」T說。
-「不是用度數描述的」D說。
-「恩，肯定不是」W邊說邊看著。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&mldr; &mldr; &ldquo;One hundred yeahs"只聽那個人用極慢的速度吐出了"one hundred"兩個單詞。我看著那個小孩，年齡如此之小，不太可能精通攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了。他說yeahs，什麼意思? 一定是在說元，發音不太標準，但還加個複數，看得出非常認真，畢竟能流利的拼出yuan這個音已經很厲害了。但是100塊一份拷貝? 太貴了，我甚至懷疑會有人要嗎。於是我問他"Do you mean 100 dollar?&rdquo; 他說：&ldquo;不，不是美元&rdquo;。嗨，他懂中文。接著他認真的一個字一個字的說：&ldquo;是 一 百 念&rdquo;，我大腦立刻停止了運轉。&ldquo;What? One, one hundred years?&rdquo; &mldr; &mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-</p>
-</div>
-<div class=post-footer>
-<time>September 11, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-properties/>
 【非真實地場】度數
 </a>
 </h2>
@@ -76,10 +56,7 @@
 「不是用度數描述的」D說。
 「恩，肯定不是」W邊說邊看著。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&mldr; &mldr;
-&ldquo;One hundred yeahs"只聽那個人用極慢的速度吐出了"one hundred"兩個單詞。我看著那個小孩，年齡如此之小，不太可能精通攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了。他說yeahs，什麼意思? 一定是在說元，發音不太標準，但還加個複數，看得出非常認真，畢竟能流利的拼出yuan這個音已經很厲害了。但是100塊一份拷貝? 太貴了，我甚至懷疑會有人要嗎。於是我問他"Do you mean 100 dollar?&rdquo; 他說：&ldquo;不，不是美元&rdquo;。嗨，他懂中文。接著他認真的一個字一個字的說：&ldquo;是 一 百 念&rdquo;，我大腦立刻停止了運轉。&ldquo;What? One, one hundred years?&rdquo;
-&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&mldr; &mldr; &ldquo;One hundred yeahs"只聽那個人用極慢的速度吐出了"one hundred"兩個單詞。我看著那個小孩，年齡如此之小，不太可能精通攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了。他說yeahs，什麼意思? 一定是在說元，發音不太標準，但還加個複數，看得出非常認真，畢竟能流利的拼出yuan這個音已經很厲害了。但是100塊一份拷貝? 太貴了，我甚至懷疑會有人要嗎。於是我問他"Do you mean 100 dollar?&rdquo; 他說：&ldquo;不，不是美元&rdquo;。嗨，他懂中文。接著他認真的一個字一個字的說：&ldquo;是 一 百 念&rdquo;，我大腦立刻停止了運轉。&ldquo;What? One, one hundred years?&rdquo; &mldr; &mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 </p>
 </div>
 <div class=post-footer>
@@ -268,9 +245,29 @@
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-on-simulation/>
+【非真實地場】虛擬
+</a>
+</h2>
+<div>
+<p>「擴譯器裡的3總是和神有關，像是有什麼理論」J問。
+「只是一些常識」C說。
+「又像是遊戲，是遊戲的理論嗎」J說。
+「你是說神的理論?」C說。
+「我再想想」J說。
+「看看這個」C說。
+</p>
+</div>
+<div class=post-footer>
+<time>September 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 4</p>
+<p>Page 1 of 3</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
