--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
 </a>
 </h2>
 <div>
-<p>「這幾個屬性之間的關係弄了好久了」C說。
+<p>「這幾個FEATURE弄了好久了」C說。
 「是啊，估計快完了」T說。
 「不是用度數描述的」D說。
 「恩，肯定不是」W邊說邊看著。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 &mldr; &mldr;
-&ldquo;One hundred yeahs"只聽他用極慢的速度吐出了"one hundred"兩個單詞。我看著那個小孩，年齡如此之小，不太可能精通攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了。他說yeahs，什麼意思? 一定是在說元，發音不太標準，但還加個複數，看得出非常認真，畢竟能流利的拼出yuan這個音已經很厲害了。但是100塊一份拷貝? 太貴了，我甚至懷疑會有人要嗎。於是我問他"Do you mean 100 dollar?&rdquo; 他說：&ldquo;不，不是美元&rdquo;。嗨，他懂中文。接著他認真的一個字一個字的說：&ldquo;是 一 百 念&rdquo;，我大腦立刻停止了運轉。&ldquo;What? One, one hundred years?&rdquo;
-&mldr; &mldr;
+&ldquo;Two hundred yeahs"我只聽到"two hundred"兩個單詞以很很很慢的速度從他嘴裡蹦了出來，極其認真的樣子。我看著那個小孩，年齡如此之小，不太可能很熟悉攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了，有時有小孩跑著經過。他說yeahs，什麼意思? 一定是在說元，發音不太標準，但還加個複數，看得出非常認真，畢竟能流利的拼出yuan這個音已經很厲害了。於是我問他"Did you mean 200 dollars?&rdquo; 他說：&ldquo;不，不是美元&rdquo;。嗨，他懂中文。接著他認真的一個字一個字的說：&ldquo;是 二 百 念&rdquo;，我的大腦停止了運轉。&ldquo;What? two, two hundred years?"，恍惚間我看到旁邊的小台子上擺著一個標籤"Not for sell&rdquo;。 &mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 </p>
 </div>
