--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 </h2>
 <div>
 <p>「這些數字看起來，恩，似乎有意義」J說。
-「是的，我在分析這種形式」D說。
+「是的，我在分析這種形式」C說。
 「你是說它的起源」N說。
-「恩，每一種形式都有起源。當然，就像文檔裡說的那樣，沒有無內容的形式，也沒有無形式的內容。」E說。
+「恩，每一種形式都有起源。當然，就像文檔裡說的那樣，沒有無內容的形式，也沒有無形式的內容」D說。
 「就像一種組合」N說。
-「是的」E說。
+「是的，不像機器，機器的基本結構是簡單的，一般不需要分析，除非有重大進展」D說。
+「哦」N說。
 「看看這些」W說。
 </p>
 </div>
