--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 </a>
 </h2>
 <div>
-<p>「這塊已經很久沒有變過」A說。
-「是成熟的」W說。
-「是的，幾乎都自動化了」N說。
-「這部分開始像模像樣了」A說。
-「是的」V邊說邊看著。
+<p>「這塊已經很久沒有變過」J說。
+「是成熟的」C說。
+「是的，幾乎都自動化了」A說。
+「這部分開始像模像樣了」E說。
+「是的」T邊說邊看著。
 </p>
 </div>
 <div class=post-footer>
