--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 「仍然和規律有關」D說。
 「文檔第一頁有說明」C說。
 「這種模型是不是太簡單了」W邊說邊看著。
-「足夠了，我想」C邊說邊看。
+「看起來足夠了」C邊說邊看。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= … … 那天中午，化妝師找他給一個朋友的新生兒起名，好像很急的樣子，算命師把資料輸入、設置好參數之後就躺着休息了，然後不小心睡著了。結果沒一會兒那狗把鍵拽了下來，把他弄醒了。那個算命師一看，原來是程序出bug了，滿屏幕的錯誤信息在跳動，狗像見到了怪物一樣，想去攻擊那個屏幕，不小心扯着鍵盤的連線了。算命師仔細一看，是隱藏了好久的bug，如果不是這次，可能還要好久才能發現。想想真是有意思，有時候程序有問題連動物都能發現，人卻忽略了。 … … =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
