deploy: caa25e93c81f25976b35781412b148b94e1fea84

--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-engineering/>
+Uf on Engineering
+</a>
+</h2>
+<div>
+<p>「這種填充方式沒問題吧」A說。
+「一直是這樣啊」T說。
+「沒發現什麼問題，沒有變過」J說。
+「這部分已經做到極限了」C邊說邊看著。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+… …
+他見人就給人說那些CPU用了多厲害多厲害的技術，他是理科出身，應該是了解很多IC行業的東西。那個新手說，驕傲很難，可是謙虛好像也不容易啊。他說，很容易啊，多說我不行我不行，如果別人感覺不到，可以說，我的人生如此悲劇啊，就像。。什麼什麼。他可能是想說一個比喻，但是找不到形象的。說完，他哼哼哼的笑了起來。他說，我是為你好，這樣你就容易被老手提攜啦。新手說，您很驕傲，可是我沒有你那麼帥呀。他說，我帥嗎，我一點都不帥啊，你胡說八道什麼，你，你，真是沒前途。他對書沒多大的興趣，他給人寫情書，偶爾有些地方看似出彩，其實那些比喻都是他掐著他弟的脖子讓他弟幫他想的，當然，被他追的女生也都知道。
+… …
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 15, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-surface/>
 【非真實地場】表面
 </a>
@@ -241,29 +263,6 @@
 </div>
 <div class=post-footer>
 <time>September 9, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-image/>
-【非真實地場】圖像
-</a>
-</h2>
-<div>
-<p>「大腦裡的圖像越來越清楚」D說。
-「是的，怎麼說都得先有一個圖像之類的東西」A說。
-「我在想為什麼解釋會這麼清晰」B說。
-「也許是字數比較多，描述比較詳細」N說。
-「這可能涉及到概念之間的關係」C說。
-「看看這些」J說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= … &mldr;
-他們拍的那個兒童版的戲大家期待超高，那戲不簡單，拍的卻特別順利，有的小男孩全程沒幾個鏡頭，小女孩全程長頭髮紮起來，都極其出彩，頂多有時候冰鎬容易說成冰糕，冰球說成乒球、乒乓球，算下來幾個月就拍了這麼多，居然比有些肥皂劇還快，真是奇蹟。 … &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-</p>
-</div>
-<div class=post-footer>
-<time>September 8, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
