--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-2/>
+【非真實地場】資料(2)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= C就像毒，藏在我骨頭里，讓我顫抖。D就像霜，附在我身體上，讓我冷艷。我討厭化妝，討厭高貴。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 17, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-1/>
 【非真實地場】資料(1)
 </a>
@@ -231,28 +245,6 @@
 </div>
 <div class=post-footer>
 <time>September 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-original/>
-【非真實地場】原始
-</a>
-</h2>
-<div>
-<p>「總感覺這種方式有些太原始」D說。
-「我不確定這些insight是否可靠，更不用說將這些作為架構了」N說。
-「步驟不太連續，有時候不確定下一步是什麼，像在做手工藝」E說。
-「不像流水線」A說。
-「不知道後面會是什麼形態，現在不少像是直覺」E說。
-「不像是藝術，我指的是不像素描，可能更像速寫。我認為我們越來越接近了」U說。
-「我覺得沒問題」T說。
-「看這些」D說。
-</p>
-</div>
-<div class=post-footer>
-<time>September 9, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
