--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-5/>
+【非真實地場】資料(5)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 他們邊走邊討論著，經過樹林、經過清晨、經過青春。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 18, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-4/>
 【非真實地場】資料(4)
 </a>
@@ -208,31 +222,6 @@
 </div>
 <div class=post-footer>
 <time>September 13, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-degree/>
-【非真實地場】度數
-</a>
-</h2>
-<div>
-<p>「這幾個FEATURE弄了好久了」C說。
-「是啊，估計快完了」T說。
-「不是用度數描述的」D說。
-「恩，肯定不是」E邊說邊看著。
-「卡倫西的歷史有問題嗎」W說。
-「還在看玉区方面的數據」A一邊看一邊說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&mldr; &mldr;
-&ldquo;Two hundred yuels"我只聽到"two hundred"兩個單詞以很很很慢的速度從那個孩子嘴裡蹦了出來，極其認真的樣子。我看著他，年齡如此之小，不太可能很熟悉攝影，也許是來做介紹的。那影片也極其普通，不過是一段植物的特寫，花兒隨著風飄啊飄罷了，有時有小孩跑著經過。他說yuels，什麼意思? 一定是在說玉区，發音不太標準，但流利的拼出yuel這個音，甚至還加了複數，已經很厲害了。於是我問他"Did you mean 200 dourel?&rdquo; 他說：&ldquo;不，不是都羅&rdquo;。嗨，他懂仝文。接著他認真的一個字一個字的說：&ldquo;是 二 百 念&rdquo;，我的大腦停止了運轉。&ldquo;What? two, two hundred years?"，恍惚間我看到旁邊的小台子上擺著一個標籤"Not for sell&rdquo;。
-&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-</p>
-</div>
-<div class=post-footer>
-<time>September 11, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
