--- a/index.html
+++ b/index.html
@@ -46,12 +46,27 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-6/>
+【非真實地場】資料(6)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「這種語言裡缺少氣息」她說。 「哦，你覺得怎麼寫更有氣息？」他說。 「比如——他們走路、討論，經過樹木，經過早晨，經過青春」她說。 「真是」他再一次驚奇的了下來。喘氣似乎和呼吸不同，他思考著。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 19, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-5/>
 【非真實地場】資料(5)
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 他們邊走邊討論著，經過樹林、經過清晨、經過青春。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 他們走著討論著，經過樹木、經過清晨、經過青春。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 18, 2021</time>
@@ -203,31 +218,9 @@
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-form/>
-【非真實地場】形式
-</a>
-</h2>
-<div>
-<p>「這些數字看起來，恩，似乎有意義」J說。
-「是的，我在分析這種形式」C說。
-「你是說它的起源」N說。
-「恩，每一種形式都有起源。當然，就像文檔裡說的那樣，沒有無內容的形式，也沒有無形式的內容」D說。
-「就像一種組合」N說。
-「是的，不像機器，機器的基本結構是簡單的，一般不需要分析，除非有重大進展」D說。
-「哦」N說。
-「看看這些」W說。
-</p>
-</div>
-<div class=post-footer>
-<time>September 13, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 4</p>
+<p>Page 1 of 5</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
