--- a/index.html
+++ b/index.html
@@ -46,6 +46,38 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-8/>
+【非真實地場】資料(8)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+時間裡沒有光，秒針停止在3點鐘的位置，顫抖著，彷彿在等待著什麼。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 19, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-7/>
+【非真實地場】資料(7)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+氣息、空氣，他心裡想著。和她說話時，趨勢、前途，他日思夜想的事情都消失了。他攀登過很多山，卻像是第一次感覺到高處的溫度。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 19, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-6/>
 【非真實地場】資料(6)
 </a>
@@ -178,50 +210,6 @@
 </div>
 <div class=post-footer>
 <time>September 15, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-simplicity/>
-【非真實地場】簡單
-</a>
-</h2>
-<div>
-<p>「這不止是概率」C說。
-「像是關於概率的概率」N說。
-「仍然和規律有關」D說。
-「文檔第一頁有說明」C說。
-「這種模型是不是太簡單了」W邊說邊看著。
-「看起來足夠了」C邊說邊看。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-… …
-那天中午，化妝師找算命師給一個朋友的新生兒起名，好像很急的樣子，他把資料輸入、設置好參數之後就躺着然後不小心睡著了。結果沒一會兒那狗突然把鍵拽到地上去了，一下子把他弄醒了。算命師一看，原來是程序出bug了，滿屏幕的錯誤信息在跳動，狗像見到了怪物一樣，想去攻擊那個屏幕，不小心扯着鍵盤的連線了。算命師仔細一看，是隱藏了好久的bug，如果不是這次可能還要好久才能發現。計算機程序有問題連動物都能發現，人卻可能忽略，這時候動物對程序像是比人對程序還敏感，想想真是有意思。
-… …
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-</p>
-</div>
-<div class=post-footer>
-<time>September 14, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-maturity/>
-【非真實地場】成熟
-</a>
-</h2>
-<div>
-<p>「這塊已經很久沒有變過」J說。
-「是成熟的」C說。
-「是的，幾乎都自動化了」A說。
-「這部分開始像模像樣了」E說。
-「是的」T邊說邊看著。
-</p>
-</div>
-<div class=post-footer>
-<time>September 13, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
