deploy: 0591b9d6969d6ad7dac9a51d87067bcb6e30da95

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-10/>
+【非真實地場】資料(10)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「路过樹木，總感覺不太順」他說。 「恩，我想想，路過。。」她說。
+「樹列? 」她遲疑了片刻，說道。
+「樹列！這就對了！樹列，樹組，暈，我怎麼沒想到呢？」他興奮的停了下來。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 20, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-9/>
 【非真實地場】資料(9)
 </a>
@@ -190,27 +208,6 @@
 </div>
 <div class=post-footer>
 <time>September 17, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-engineering/>
-【非真實地場】工程
-</a>
-</h2>
-<div>
-<p>「這種填充方式沒問題吧」A說。
-「一直是這樣」T說。
-「沒發現什麼問題，沒有變過」J說。
-「已經做到極限了」C邊說邊看著。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-… …
-他見人就給人說那些CPU用了多厲害多厲害的技術，他是理科出身，應該是了解很多计算机行業的東西。那個新人說，驕傲很難，可是謙虛好像也不容易啊。他說，谦虚？谦虚很容易啊，多說我不行我不行，如果別人感覺不到，可以說，我的人生如此悲劇啊，就像。。什麼什麼。他可能是想說一個比喻，但是一时找不到形象的。說到这，他哼哼哼的笑了起來，然后說，我是為你好，這樣你就容易被老人提攜喽。新人說，您很驕傲，可是我沒有您那麼帥呀。他說，我帥嗎，我一點都不帥啊，你胡說八道什麼，你，你，真是肤浅，一点深度都没有，没前途。他對書沒多大的興趣，他給人寫情書，偶爾有些地方看似出彩，其實那些比喻都是他掐著他弟的脖子讓他弟幫他想的，當然，被他追的女生也都知道。 … …
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 15, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
