--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 我痛恨真理，就像他痛恨戰爭。我喜歡力量，就像他喜歡善良。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 我痛恨真理，就像他痛恨戰爭。我喜歡力量，就像他喜歡善良。信仰？沒有真理，這就是我的信仰。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 20, 2021</time>
@@ -203,7 +202,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= C就像毒，藏在我骨頭里，讓我顫抖。D就像霜，附在我身體上，讓我冷艷。我討厭化妝，討厭高貴。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+C就像毒，藏在我骨頭里，讓我顫抖。D就像霜，附在我身體上，讓我冷艷。我討厭化妝，討厭高貴。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 17, 2021</time>
