deploy: 82c1b5eacad6bfc3cfd794b0edda49d5eed30620

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 她為什麼輸？ 她樣貌精緻，我是說，她化妝了。
+&mldr; &mldr;
+我試圖控制我的頭髮，就像控制真理。
+&mldr; &mldr;
+她喜歡模仿我的裝束？這件事我知道。追她的男人很多，那上千封情書每一篇都熱情洋溢，但似乎都是一個格律。聽說快有一萬篇了，幫我恭喜她，和以前一樣。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -100,7 +104,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-與我比美？有勇氣的行為。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+與我比美？勇敢者的行为。攻击一个人的强项，这勇气来自爱情吧？
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 20, 2021</time>
