--- a/index.html
+++ b/index.html
@@ -46,38 +46,6 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-material-19/>
-【非真實地場】資料(19)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她喜歡模仿我的裝束？這件事我知道。追她的男人很多，那上千封情書每一篇都熱情洋溢，但似乎都是一個格律。聽說快有一萬篇了，幫我恭喜她，和以前一樣。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-18/>
-【非真實地場】資料(18)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-我試圖控制我的頭髮，就像控制真理。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-17/>
 【非真實地場】資料(17)
 </a>
@@ -204,6 +172,43 @@
 </div>
 <div class=post-footer>
 <time>September 20, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-9/>
+【非真實地場】資料(9)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「這種文字法则不严格」她說。
+「法則? 什麼樣的文字才算有嚴格的法則?」他說。
+「比如——時間沒有速度，空間沒有質量」她說。
+「確實！」他又一次驚奇的停了下來，光和速度不同，就像物質和質量不同，他想。
+「文字的法則，你是說文法？」他說。
+「真正的文字裡能看到文法」她說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 19, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-8/>
+【非真實地場】資料(8)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+時間裡沒有光，空間裡沒有物質，只有秒針停止在3點鐘的位置，顫抖著，彷彿在等待什麼。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 19, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
