--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她為什麼輸？ 她樣貌精緻，我是說，她化妝了。
-&mldr; &mldr;
-我試圖控制我的頭髮，就像控制真理。
-&mldr; &mldr;
+她為什麼輸？ 她樣貌精緻，我是說，她化妝了。 &mldr; &mldr;
 她喜歡模仿我的裝束？這件事我知道。追她的男人很多，那上千封情書每一篇都熱情洋溢，但似乎都是一個格律。聽說快有一萬篇了，幫我恭喜她，和以前一樣。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
