--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-今年的2月只有28天，下個月就要換地方，真不知道下次再來是什麼時候。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+今年的2月只有28天，下個月就要換地方，真不知道下次再來是什麼時候。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 20, 2021</time>
