deploy: b2fb569ba48e2a89c9ac7f6219ce062760b294ca

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-今年的2月只有28天，下個月就要換地方，真不知道下次再來是什麼時候。
+今年2月只有28天，下個月就要換地方，真不知道下次再來是什麼時候。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
