deploy: c233083ad83e69025b8debcf3553b7d8ed89273d

--- a/index.html
+++ b/index.html
@@ -46,6 +46,42 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-20/>
+【非真實地場】資料(20)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+開完董事會，他看著窗外的天空。能準備的都準備好了，總算有時間思考一些更重要的事情了，他想。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 26, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-19/>
+【非真實地場】資料(19)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「你，和你媽媽?」他說。
+「是的，一起學琴」她說。
+「哦！這。。這很有意思」他，說道。
+「沒什麼值得驚奇的，親愛的老師，這可能是我家的傳統」她說。
+「哦? 您的意思是?」他說。
+「我媽和我外婆也曾經一起學習」她說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 21, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-17/>
 【非真實地場】資料(17)
 </a>
@@ -168,43 +204,6 @@
 </div>
 <div class=post-footer>
 <time>September 20, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-9/>
-【非真實地場】資料(9)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「這種文字法则不严格」她說。
-「法則? 什麼樣的文字才算有嚴格的法則?」他說。
-「比如——時間沒有速度，空間沒有質量」她說。
-「確實！」他又一次驚奇的停了下來，光和速度不同，就像物質和質量不同，他想。
-「文字的法則，你是說文法？」他說。
-「真正的文字裡能看到文法」她說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 19, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-8/>
-【非真實地場】資料(8)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-時間裡沒有光，空間裡沒有物質，只有秒針停止在3點鐘的位置，顫抖著，彷彿在等待什麼。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 19, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
