--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-最近的電影都差不多，沒什麼意思，有一部被改的不知道在講什麼，還不如去看原著，他想。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「最近看啥了嗎?」A說。
+「這幾部拍的都差不多，沒什麼意思。這個你看了嗎，被改的不知道在講什麼」D說。
+「我也看不懂」A說。
+「還不如去看原著」D說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 26, 2021</time>
