deploy: 0114041d91bc873fcd853ad36e3fd3e4f9ecd6fe

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-這幾本書。。應該夠打發這個無聊的週末了，她想。
+這幾本小說。。應該夠打發這個無聊的週末了，她想。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
