--- a/index.html
+++ b/index.html
@@ -52,15 +52,14 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「標點? 真的有那麼重要?」他說。
-「等等」她抽出一個本子，翻到其中一頁遞給他。
+「標點。。真的有这麼重要?」他說。
+「等等」她抽出一本薄薄的书，翻到其中一頁遞給他。
 「 我走在沒有標點的世界
 就像進入沒有節奏的舞會
-長方形的場地
-退化成百米長的跑道
-不像力度的遊戲
-更像速度的競技 」
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+我感觉到绝对的方向 感觉不到相对的位置 長方的場地
+退化成百米的跑道
+我逐渐分不清 这是力度的遊戲
+还是速度的競技 」 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 27, 2021</time>
