deploy: 651acd74af791b25cda2fcaeb47a1fdfa5dab486

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-不要觸碰皮膚，那裡沒有感覺
-不要觸碰肌肉，那裡沒有血液
-不要觸碰骨頭，那裡沒有靈魂
+他們拿著放大鏡在空氣中尋找著什麼，像在尋找真理。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
