--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-28/>
+【非真實地場】資料(28)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+我沒有內涵、我像個潑婦? 你說得很對，這就是我要做的，這是我的角色。我只有一個孩子，他是男孩。但我們不止有兒子，還有女兒。我一直擔心的是，如果我今日不潑，以後我們的女兒就要很潑，甚至潑一輩子。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 28, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-27/>
 【非真實地場】資料(27)
 </a>
@@ -198,22 +214,6 @@
 「沒什麼值得驚奇的，親愛的老師，這可能是我家的傳統」她說。
 「哦? 您的意思是?」他說。
 「我媽和我外婆也曾經一起學習」她說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-18/>
-【非真實地場】資料(18)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-這個動作都如此輕鬆? 他。。真的來自南區嗎?
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 21, 2021</time>
