--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他們拿著放大鏡在空氣中尋找著什麼，像在尋找真理。
+人們拿著放大鏡在空氣中尋找著什麼，像在尋找真理。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
