deploy: 5389cd1efa574619e26e67b230ac34ea25aaa1c4

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-不要觸碰皮膚，那裡沒有感覺。 不要觸碰肌肉，那裡沒有血液。 不要觸碰骨頭，那裡沒有靈魂。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+這種速度、這種流暢程度，很久沒在冰面上看到這樣的軌跡，她一定訓練過很久吧。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>September 28, 2021</time>
