--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 「可以這麼說，你不能只把東西分為吃的、用的、穿的、家居、圖書等等」她說。
 「就像化妝品的成分介紹」他說。
 「可以這麼說，想一想，你去超市，所有東西只有三種標籤"食品",&ldquo;用品&rdquo;,&ldquo;服裝&rdquo;」她說。
-「你就無法知道每個東西到底是什麼」他說。
+「你無法知道每個東西到底是什麼」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
