--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 「恩，品牌加上名字。你不能只把東西分為吃的、用的、穿的、家居、圖書等等」她說。
 「就像化妝品的成分介紹」他說。
 「可以這麼說，想一想，你去超市，所有東西只有三種標籤"食品"、&ldquo;生活&rdquo;、&ldquo;服裝&rdquo;、&ldquo;家居&rdquo;、&ldquo;圖書&rdquo;」她說。
-「你知道是吃的，不知道是什麼吃的」他說。
+「你只知道是吃的，不知道是什麼吃的」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
