--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-36/>
+Uf Material 36
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「目標！你沒有目標嗎」他說。
+「我想要像她一樣強大，這毫無疑問」她說。
+「我知道。為什麼很少上網？你是否想過為什麼？」他說。
+「我。。我，也許力量不夠」她說。
+「你的力量完全足夠」他說。
+「我覺得每一個球我都用力去接了」她說。
+「你的力量，完全足夠」他說。
+「我。。你是說，我是在應付？」她說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 28, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-35/>
 【非真實地場】資料(35)
 </a>
@@ -198,31 +221,9 @@
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-26/>
-【非真實地場】資料(26)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「標點。。真的有这麼重要?」他說。
-「等等」她抽出一本薄薄的书，翻到其中一頁遞給他。
-「 我走在沒有標點的世界
-就像進入沒有節奏的舞會
-我感觉到绝对的方向 感觉不到相对的位置 長方的場地
-退化成百米的跑道
-我逐渐分不清 这是力度的遊戲
-还是速度的競技 」 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 27, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 7</p>
+<p>Page 1 of 8</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
