--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-36/>
-Uf Material 36
+【非真實地場】資料(36)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「目標！你沒有目標嗎」他說。
+「目標！你沒有目標嗎？」他說。
 「我想要像她一樣強大，這毫無疑問」她說。
 「我知道。為什麼很少上網？你是否想過為什麼？」他說。
 「我。。我，也許力量不夠」她說。
