deploy: ea0daabf3623783143674061dc6b3ce21ac0bfd0

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-37/>
+【非真實地場】資料(37)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+教練那麼急，她，西區一隊的靈魂之一，打法豐富。有些球我只是勉強能接到，而且她似乎一直未改變路線，也許。。也許她只用了七分力氣，甚至六分、五分。再說，依賴上網的打法過時了，這是常識，教練怎能不知道？真是讓人困惑。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 28, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-36/>
 【非真實地場】資料(36)
 </a>
@@ -198,22 +214,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 比美？一個小孩的要求？這麼小，痴痴傻傻的樣子多麼可愛，為什麼要學大人？要換那麼多套衣服，花那麼多時間，擺那麼多pose，卻沒有玩的時間，她會習慣嗎？
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 28, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-27/>
-【非真實地場】資料(27)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-人們拿著放大鏡在空氣中尋找著什麼，像在尋找真理。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
