--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-W奶奶那麼和藹，和叔叔阿姨又都那麼熟悉，帥氣的A爺爺依然選擇了繼續原來的生活，叔叔和阿姨是否很意外呢？
+W奶奶那麼和藹，和叔叔阿姨又都那麼熟悉，A爺爺依然選擇了繼續原來的生活，叔叔和阿姨是否很意外呢？
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
