--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-和藹的W奶奶叔叔阿姨那麼熟悉，A爺爺依然選擇了繼續原來的生活，叔叔和阿姨是否很意外呢？
+和藹的W奶奶和叔叔阿姨那麼熟悉，A爺爺依然選擇了繼續原來的生活，叔叔和阿姨是否很意外呢？
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
