deploy: 6dd25ebf040d75b2d77ffe659ba8b7faa69e90a3

--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-41/>
+【非真實地場】資料(41)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+風之飄搖，A、D、G、J等打法的經典感覺。頂級選手大多是風象星座，眾所周知的phenomenon(現象)。這類打法和星座有什麼關係，我並不了解。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>September 29, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-40/>
 【非真實地場】資料(40)
 </a>
@@ -197,24 +212,6 @@
 「就像化妝品的成分介紹」他說。
 「可以這麼說，想一想，你去超市，所有東西只有三種標籤"食品"、&ldquo;生活&rdquo;、&ldquo;服裝&rdquo;、&ldquo;家居&rdquo;、&ldquo;圖書&rdquo;」她說。
 「你只知道是吃的，不知道是什麼吃的」他說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 28, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-31/>
-【非真實地場】資料(31)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「&ldquo;All models are wrong, some model are useful(所有的模型都是錯的，有些是有用的)"」K說。 「這意味著即使我們的模型再大再精確，也無法代替真實的地球」J說。
-「也就是說要理解真實的地球，必須走在地球的地面上，感受它表面的氣體、溫度，感受它的坑坑洼洼」K說。
-「今年我肯定不去了」J說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
