deploy: 5a480801e67469bce9fad75e0154bd13162bc690

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-風之飄搖，A、D、G、J等打法的經典感覺。頂級選手大多是風象星座，眾所周知的phenomenon(現象)。這類打法和星座有什麼關係，我並不了解。
+風之飄搖，A、D、G、J等打法的經典感覺。頂級選手大多是風象星座，眾所周知的phenomenon(現象)。這類打法和星座有什麼關係，我並不了解。不適應的選手常常會感到失去方向，這是人們的經驗。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
