deploy: 87557947b4cb0a7aae4afaf777e3493e64ad52fe

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-水之禦，以強大的反手回應對手的進攻。K、N、Q等打法的特點。
+水之禦，以強大的反手回應對手熱力的進攻，像水牆或是瀑流。K、N、Q等打法的特點。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
