deploy: 2a4e2633cd5ee0a19d4411d6cbb18d4716a591d7

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 </a>
 </h2>
 <div>
-<p>印象派&ndash;時空之縮寫，精確之模糊，實質之渲染，正真之縮影。</p>
+<p>「準確的說，不叫飄搖」S說。
+製造超長的奔跑距離，讓對手感覺像在看不到頭的跑道上奔跑。V和D看著X的跑位。 「空之飄渺！這就是傳說中的空之飄渺！」D叫著。</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
