deploy: ca61a1193af175aafe6632f30004060774e9df0a

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-57/>
+Uf Material 57
+</a>
+</h2>
+<div>
+<p>印象派&ndash;時空之縮寫，精確之模糊，實質之渲染，正真之縮影。</p>
+</div>
+<div class=post-footer>
+<time>September 30, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-56/>
 【非真實地場】資料(56)
 </a>
@@ -182,22 +196,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 我長出智能、長出心靈，就像長出生命。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>September 30, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-47/>
-【非真實地場】資料(47)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-水之禦，以強大的反手回應對手熱力的進攻，像水牆或是瀑流。K、N、Q等打法的特點。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
