deploy: 8c8e241e641d83c012b6c971db12de8da73bf987

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 </a>
 </h2>
 <div>
-<p>此等學識，如無文之明，不謂文明。
-此等宗教，如無崇之拜，不謂崇拜。
-此等建構，如無根之基，不謂根基。</p>
+<p>失此則學識如無文之明，不謂文明。宗教如無崇之拜，不謂崇拜。建構如無根之基，不謂根基。</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
